--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Web Designer, Web Developer, Digital Marketer, Motion Graphics Designer</div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1lOsWpXPgPcEzm0mmnzMScwJgDQCwCf0Q/view?usp=sharing" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed?v=AyFu9Xd-m4A&t=21s" data-bs-target="#videoModal">
                             <span></span>
@@ -148,14 +148,14 @@
                     </div>
                     <div class="d-flex align-items-center mb-3">
                         <h5 class="border-end pe-3 me-3 mb-0">Happy Clients</h5>
-                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">1234</h2>
+                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">1200</h2>
                     </div>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
+                    <p class="mb-4">More than 1000+ people are satisfied by working with us. And they appreciate us</p>
                     <div class="d-flex align-items-center mb-3">
                         <h5 class="border-end pe-3 me-3 mb-0">Projects Completed</h5>
-                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">1234</h2>
+                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">2435</h2>
                     </div>
-                    <p class="mb-0">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
+                    <p class="mb-0">We have completed more than 2400+ projects so far. And everyone is very satisfied with our work</p>
                 </div>
             </div>
         </div>
@@ -294,7 +294,7 @@
                                     <h5>HSC</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2025 - 2026</p>
-                                    <h6 class="mb-0">116108 - Govt. City College, Jashore</h6>
+                                    <h6 class="mb-0">Govt. City College, Jashore</h6>
                                 </div>
                             </div>
                         </div>
@@ -321,7 +321,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
                         <div class="bg-icon flex-shrink-0 mb-3">
-                            <i class="fa fa-crop-alt fa-2x text-dark"></i>
+                            <i class="fas fa-pencil-alt fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
                             <h4 class="mb-3">Graphics & Design</h4>
@@ -333,7 +333,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
                         <div class="bg-icon flex-shrink-0 mb-3">
-                            <i class="fa fa-code-branch fa-2x text-dark"></i>
+                            <i class="fas fa-video fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
                             <h4 class="mb-3">Video Editing</h4>
@@ -345,7 +345,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item d-flex flex-column flex-sm-row bg-white rounded h-100 p-4 p-lg-5">
                         <div class="bg-icon flex-shrink-0 mb-3">
-                            <i class="fa fa-code fa-2x text-dark"></i>
+                            <i class="fas fa-running fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
                             <h4 class="mb-3">Motion Graphics</h4>
@@ -465,8 +465,8 @@
                         <img class="img-fluid rounded" src="img/team-1.jpg" alt="">
                         <div class="team-text bg-white rounded-end p-4">
                             <div>
-                                <h5>Full Name</h5>
-                                <span>Designer</span>
+                                <h5>Md. Antor Sheikh</h5>
+                                <span>Graphics Designer</span>
                             </div>
                             <i class="fa fa-arrow-right fa-2x text-primary"></i>
                         </div>
@@ -477,8 +477,8 @@
                         <img class="img-fluid rounded" src="img/team-2.jpg" alt="">
                         <div class="team-text bg-white rounded-end p-4">
                             <div>
-                                <h5>Full Name</h5>
-                                <span>Designer</span>
+                                <h5>Husna Khatun</h5>
+                                <span>Digital Marketer</span>
                             </div>
                             <i class="fa fa-arrow-right fa-2x text-primary"></i>
                         </div>
@@ -489,8 +489,8 @@
                         <img class="img-fluid rounded" src="img/team-3.jpg" alt="">
                         <div class="team-text bg-white rounded-end p-4">
                             <div>
-                                <h5>Full Name</h5>
-                                <span>Designer</span>
+                                <h5>Mst. Rothna Parvin Lota</h5>
+                                <span>Web Developer</span>
                             </div>
                             <i class="fa fa-arrow-right fa-2x text-primary"></i>
                         </div>
@@ -523,10 +523,10 @@
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
+                            <p class="fs-5 fst-italic">Naeem Islam is always showing compassion and working hard to make a difference, never giving up on his dedication to change and improve humanity.</p>
                             <hr class="w-25 mx-auto">
-                            <h5>Client Name</h5>
-                            <span>Profession</span>
+                            <h5>Md.Zahir Iqbal</h5>
+                            <span>Founder of Abacus</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
@@ -535,7 +535,7 @@
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
+                            <p class="fs-5 fst-italic">Naeem Islam exemplifies true leadership through their selfless dedication to youth empowerment activities. Their efforts inspire us to conquer barriers and guide young minds to reach new heights of potential and possibility</p>
                             <hr class="w-25 mx-auto">
                             <h5>Client Name</h5>
                             <span>Profession</span>
@@ -547,7 +547,7 @@
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
+                            <p class="fs-5 fst-italic">I am inspired by Naeem Islam visionary approach to leveraging technology for social impact. Their innovative ventures not only propel economic growth but also bridge digital divides, empowering communities and driving inclusivity.</p>
                             <hr class="w-25 mx-auto">
                             <h5>Client Name</h5>
                             <span>Profession</span>
@@ -599,7 +599,7 @@ Khulna - Jashore - Jashore Sadar</h3>
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                    <p class="mb-4">Feel free to contact me.</a>.</p>
                     <form>
                         <div class="row g-3">
                             <div class="col-md-6">
